#------------------------------------------------------------------------------
#                             CMAKE
#------------------------------------------------------------------------------
cmake_minimum_required(VERSION 2.8)

#------------------------------------------------------------------------------
#                             EXAMPLES
#------------------------------------------------------------------------------

add_subdirectory( cmake )

